tests/negative/list_try_continue_push_break_oob.far
fun main() -> i64 {
  lst: List<i64> = List<i64>()
  for x in 0..<6 {
    try {
      if (x == 1) { continue }
      lst.push(x)
      if (x == 3) { break }
    } catch (e) {
    }
  }
  lst[3] = 1
  return 0
}
